--- a/templates/blog/books_list.html
+++ b/templates/blog/books_list.html
@@ -1,11 +1,20 @@
-<h1>Каталог книг</h1>
-<hr>
-    {% for i in books %}
-    <br>
-    <img src="{{ i.image.url }}" width="250" height="350">
-    <h2>{{ i.name }}</h2>
-    <p>Автор - {{ i.author_name }}</p>
-    <a href="/books/{{ i.id }}">Описание</a>
-    <br>
-    {% endfor %}
-<hr>
+{% include "../header.html" %}
+
+<center>
+  <h1>Каталог книг</h1>
+
+      {% for i in books %}
+  <br>
+  <div class="card" style="width: 18rem;">
+    <img src="{{ i.image.url }}" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">{{ i.name }}</h5>
+      <p class="card-text">{{ i.author_name }}</p>
+      <a href="/books/books_catalog/{{ i.id }}/" class="btn btn-primary">Описание</a>
+    </div>
+  </div>
+  <br>
+  {% endfor %}
+</center>
+
+{% include "../footer.html" %}
