--- a/templates/blog/books_list.html
+++ b/templates/blog/books_list.html
@@ -3,7 +3,7 @@
 <center>
   <h1>Каталог книг</h1>
   <button type="button" class="btn btn-primary">
-    <a href="/books/books_catalog/create_book/" class="add_bks">Добавить книгу</a>
+    <a href="/books/books_catalog/create_book/" class="btn btn-primary">Добавить книгу</a>
   </button>
   <br><br>
   {% for i in books %}
